35 Vertically aligning control buttons, unmounting component at node and fix

--- a/src/app.css
+++ b/src/app.css
@@ -2,3 +2,7 @@
   width: 100%;
   height: 100vh;
 }
+
+.fit-bounds-control-container {
+  display: grid;
+}
